--- a/src/main/webapp/src/components/ModalWindow/ModalWindow.less
+++ b/src/main/webapp/src/components/ModalWindow/ModalWindow.less
@@ -4,10 +4,10 @@
   position: fixed;
   z-index: 1;
   left: 10vw;
-  top: 5vw;
+  top: 5vh;
   width: 80vw;
-  height: 80vw;
-  overflow: auto;
+  height: 80vh;
+  overflow: scroll;
   font-size: 18px;
   padding: @base-size*4;
   background-color: rgba(0, 0, 0, 0.7);
