--- a/src/main/webapp/src/components/Card/Card.less
+++ b/src/main/webapp/src/components/Card/Card.less
@@ -6,6 +6,7 @@
     height: 15*@base-size;
     margin: @base-size;
     padding: @base-size;
+    position: relative;
 
     .header{
         font-size: 1.5em;
@@ -18,6 +19,19 @@
 
         .add{
             cursor: pointer;
+        }
+    }
+
+    .controls {
+        position: absolute;
+        right: 8px;
+
+        .control {
+            cursor: pointer;
+        }
+
+        .control + .control {
+            margin-left: 4px;
         }
     }
 }
