--- a/src/main/webapp/src/components/Card/Card.less
+++ b/src/main/webapp/src/components/Card/Card.less
@@ -7,6 +7,7 @@
     margin: @base-size;
     padding: @base-size;
     position: relative;
+    border-radius: 10px;
 
     .header{
         font-size: 1.5em;
