--- a/src/main/webapp/src/components/Button/Button.less
+++ b/src/main/webapp/src/components/Button/Button.less
@@ -18,4 +18,47 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transition: 0.5s;
   cursor: pointer;
+  animation: bounce 4s infinite;
+}
+
+@keyframes bounce {
+  0% {
+    margin-top: 0px;
+    margin-right: 0px;
+  }
+
+  10% {
+    margin-top: 10px;
+    margin-right: 5px;
+  }
+
+  20% {
+    margin-top: 0px;
+    margin-right: -2px;
+  }
+
+  40% {
+    margin-top: 20px;
+    margin-right: 2px;
+  }
+
+  50% {
+    margin-top: 0px;
+    margin-right: 0px;
+  }
+
+  55% {
+    margin-top: 10px;
+    margin-right: 5px;
+  }
+
+  60% {
+    margin-top: 0px;
+    margin-right: -5px;
+  }
+
+  80% {
+    margin-top: 5px;
+    margin-right: 5px;
+  }
 }
