--- a/src/main/webapp/src/components/Logout/Logout.less
+++ b/src/main/webapp/src/components/Logout/Logout.less
@@ -1,7 +1,7 @@
 @import "../../ColorSchema.less";
 
 .logout {
-    font-size: 14px;
-    cursor: pointer;
-    padding: @base-size;
+  font-size: 16px;
+  cursor: pointer;
+  padding: @base-size*2;
 }
